# clover-timer

./: .gitignore  README.md
case/: bottom_rev0_1.ipt  bottom_rev0f.stl  jigu_laser_rev2.ai  jigu_laser_rev2.dxf  pcb_abs.ipt  pcb_abs2.stl
docs/: assembly-instruction-short.docx
firmware/padauk/: Makefile  main.c  util.h
firmware/padauk/.build/: main.asm  main.lst  main.rel  main.rst  main.sym
firmware/padauk/.output/: CloverTimer_PMS150G.ihx  CloverTimer_PMS150G.lk  CloverTimer_PMS150G.map
firmware/padauk/Padauk-tone/: tone.h
firmware/pico/: CMakeLists.txt  buzzer.c  timer.c
pcb/clover_timer/: CloverTimerLib.bak  clover_timer.kicad_pcb  clover_timer.kicad_prl  clover_timer.kicad_pro  clover_timer.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/clover_timer.pretty/: CR2032_GND.kicad_mod  CR2032_Plus.kicad_mod  CR2032_QandJ.kicad_mod  SW_TS4548CJ.kicad_mod
pcb/clover_timer/panelized/: clover_timer_p.kicad_pcb  clover_timer_p.kicad_prl  clover_timer_p.kicad_pro
pcb/clover_timer/panelized/garber/: clover_timer_p-B_Cu.gbr  clover_timer_p-B_Mask.gbr  clover_timer_p-B_Paste.gbr  clover_timer_p-B_Silkscreen.gbr  clover_timer_p-Edge_Cuts.gbr  clover_timer_p-F_Cu.gbr  clover_timer_p-F_Mask.gbr  clover_timer_p-F_Paste.gbr  clover_timer_p-F_Silkscreen.gbr  clover_timer_p-drl_map.gbr  clover_timer_p-job.gbrjob  clover_timer_p.drl
